# OpenCSL

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  concept.md  pyproject.toml
registry/: __init__.py  governance_api.py  main.py  models.py  utils.py
registry/adapters/: __init__.py  dbt.py  looker.py  powerbi.py  snowflake.py  superset.py  tableau.py
registry/governance/: __init__.py  approval_engine.py  audit.py  github_integration.py  models.py  notifications.py  rbac.py
semantics/dimensions/: customer_region.yaml
semantics/metrics/: active_users.yaml  gross_margin.yaml
